cloud-platform-operations/232

--- a/jobs/jenkins-master/templates/config/scriptApproval.xml.erb
+++ b/jobs/jenkins-master/templates/config/scriptApproval.xml.erb
@@ -3,6 +3,7 @@
   <approvedScriptHashes/>
   <approvedSignatures>
     <string>method groovy.lang.GroovyObject getProperty java.lang.String</string>
+    <string>method groovy.lang.GroovyObject invokeMethod java.lang.String java.lang.Object</string>
     <string>method groovy.text.TemplateEngine createTemplate java.lang.String</string>
     <string>method groovy.text.Template make java.util.Map</string>
     <string>method groovy.util.slurpersupport.GPathResult find groovy.lang.Closure</string>
@@ -12,6 +13,7 @@
     <string>method java.lang.String concat java.lang.String</string>
     <string>method java.lang.String getBytes</string>
     <string>method java.lang.Throwable printStackTrace</string>
+    <string>method java.lang.Throwable printStackTrace java.io.PrintWriter</string>
     <string>method java.net.URLConnection getContent</string>
     <string>method java.net.URLConnection setRequestProperty java.lang.String java.lang.String</string>
     <string>method java.net.URL openConnection</string>
