--- a/jobs/jenkins-master/templates/config/scriptApproval.xml.erb
+++ b/jobs/jenkins-master/templates/config/scriptApproval.xml.erb
@@ -2,6 +2,7 @@
 <scriptApproval plugin="script-security@1.15">
   <approvedScriptHashes/>
   <approvedSignatures>
+    <string>method groovy.json.JsonOutput toJson java.util.Map</string>
     <string>method groovy.lang.GroovyObject getProperty java.lang.String</string>
     <string>method groovy.lang.GroovyObject invokeMethod java.lang.String java.lang.Object</string>
     <string>method groovy.text.TemplateEngine createTemplate java.lang.String</string>
