--- a/jobs/jenkins-master/templates/config/scriptApproval.xml.erb
+++ b/jobs/jenkins-master/templates/config/scriptApproval.xml.erb
@@ -23,6 +23,7 @@
     <string>method java.util.Properties getProperty java.lang.String</string>
     <string>method java.util.Properties load java.io.Reader</string>
     <string>method java.util.Properties setProperty java.lang.String java.lang.String</string>
+    <string>new groovy.json.JsonBuilder java.lang.Object</string>
     <string>new groovy.text.SimpleTemplateEngine</string>
     <string>new java.lang.Exception java.lang.String</string>
     <string>new java.io.PrintWriter java.io.Writer</string>
